# contour3d2

./: .gitignore  README.md  contour3d2.cabal  stack.yaml
src/: Lib.hs  Matrices.hs  Tables.hs  Utils.hs
src-exe/: ExeOrthocircle.hs
