name:                contour3d2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/stla/contour3d2#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2018 Stéphane Laurent
category:            Maths
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

flag exe
  description: build the executables
  default:     False

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Utils
                     , Matrices
                     , Tables
  build-depends:       base >= 4.7 && < 5
                     , array
                     , extra
                     , vector
                     , split
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-extensions:    FlexibleContexts
                     , MultiParamTypeClasses

executable orthocircle
  if flag(exe)
    buildable: True
  else
    buildable: False
  hs-source-dirs:      src-exe
  main-is:             ExeOrthocircle.hs
  ghc-options:         -fllvm -main-is ExeOrthocircle
  build-depends:       base >= 4.7 && < 5
                     , contour3d2
                     , pretty-show
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/stla/contour3d2
